<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1C1C1C">


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <GridLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAC"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/ac"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:backgroundTint="#D4D4D2"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlusMinus"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/plusminus"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="#D4D4D2"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="#D4D4D2"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#FF9500"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSeven"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEight"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNine"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#FF9500"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFour"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFive"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSix"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubtract"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#FF9500"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOne"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTwo"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonThree"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAdd"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#FF9500"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonZero"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="170dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp"
            android:layout_columnSpan="2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#505050"
            app:cornerRadius="36dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEqual"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#FF9500"
            app:cornerRadius="36dp" />


    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>